# fitsviewer

./: CMakeLists.txt  README.md
include/kty/: FitsRenderer.h
src/: EmbeddedFont.h  FitsImage.cpp  GlImageRenderer.cpp  GlImageRenderer.h  ImageApp.cpp  ImageApp.h  Stretch.h  main.cpp
src/core/: Debayer.cpp  Debayer.h  FitsImage.h  FitsRenderer.cpp  GlImageRenderer.cpp  GlImageRenderer.h  Stretch.cpp  Stretch.h
src/ui/: ImguiApp.cpp  ImguiApp.h
third_party_gl/include/glad/: glad.h
third_party_gl/src/: glad.c
third_party_static/cfitsio/lib/pkgconfig/: cfitsio.pc
third_party_static/macos/cfitsio/lib/: libcfitsio.la
third_party_static/macos/glfw/lib/pkgconfig/: glfw3.pc
third_party_static/windows/cfitsio/include/: cfitsio_export.h
third_party_static/windows/cfitsio/lib/: cfitsio.lib
third_party_static/windows/cfitsio/lib/cmake/cfitsio/: cfitsioTargets-release.cmake  cfitsioTargets.cmake
third_party_static/windows/cfitsio/lib/pkgconfig/: cfitsio.pc
third_party_static/windows/glfw/lib/: glfw3.lib
third_party_static/windows/glfw/lib/pkgconfig/: glfw3.pc
third_party_static/windows/zlib/: zlibstatic.lib
